--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <a href="datail.html">
   <img src="img/1no44.gif" alt="レポート">
   </a>
-  <a href="datail.html">
+  <a href="datail.html?id=3">
   <img src="img/datail.gif" alt="地図表示">
   </a>
   </p>
