詳細表示を表に修正
サンプルjsonファイルを修正

--- a/datail.html
+++ b/datail.html
@@ -22,17 +22,33 @@
 
 <body>
   <h1>詳細表示</h1>
-  <p>
-  <div id="comment"></div>
-  <div id="created_at"></div>
-  <div id="date_reported"></div>
-  iid=<div id="id">id=</div>
-  llatitude=<div id="latitude">latitude=</div>
-  <div id="longitude"></div>
-  <div id="updated_at"></div>
-  <div id="state"></div>
+  <table border="1">
+  <tr><th>id</th><th>
+  <div id="id"><p>null</p></div>
+  </th></tr>
+  <tr><th>comment</th><th>
+  <div id="comment"><p>null</p></div>
+  </th></tr>
+  <tr><th>created_at</th><th>
+  <div id="created_at"><p>null</p></div>
+  </th></tr>
+  <tr><th>date_reported</th><th>
+  <div id="date_reported"><p>null</p></div>
+  </th></tr>
+  <tr><th>latitude</th><th>
+  <div id="latitude"><p>null</p></div>
+  </th></tr>
+  <tr><th>longitude</th><th>
+  <div id="longitude"><p>null</p></div>
+  </th></tr>
+  <tr><th>updated_at</th><th>
+  <div id="updated_at"><p>null</p></div>
+  </th></tr>
+  <tr><th>state</th><th>
+  <div id="state"><p>null</p></div>
+  </th></tr>
+  </table>
   <input type="button" onClick="history.back()" value="戻る">
   <input type="button" onClick="location.href='index.html'" value="OK">
-  </p>
 </body>
 </html>
