--- a/datail.html
+++ b/datail.html
@@ -19,32 +19,31 @@
     }
   </style>
 </head>
-
 <body>
   <h1>詳細表示</h1>
   <table border="1">
   <tr><th>id</th><th>
   <div id="id"><p>null</p></div>
   </th></tr>
-  <tr><th>comment</th><th>
+  <tr><th>備考</th><th>
   <div id="comment"><p>null</p></div>
   </th></tr>
-  <tr><th>created_at</th><th>
+  <tr><th>作成日</th><th>
   <div id="created_at"><p>null</p></div>
   </th></tr>
-  <tr><th>date_reported</th><th>
+  <tr><th>報告日</th><th>
   <div id="date_reported"><p>null</p></div>
   </th></tr>
-  <tr><th>latitude</th><th>
+  <tr><th>緯度</th><th>
   <div id="latitude"><p>null</p></div>
   </th></tr>
-  <tr><th>longitude</th><th>
+  <tr><th>経度</th><th>
   <div id="longitude"><p>null</p></div>
   </th></tr>
-  <tr><th>updated_at</th><th>
+  <tr><th>更新日</th><th>
   <div id="updated_at"><p>null</p></div>
   </th></tr>
-  <tr><th>state</th><th>
+  <tr><th>状態</th><th>
   <div id="state"><p>null</p></div>
   </th></tr>
   </table>
